# esp32_design_patterns

./: .gitignore  README.md
design_pattern_factory/: .cproject  .project
design_pattern_factory/components/as3020_drv/: CMakeLists.txt  as3020_drv.c
design_pattern_factory/components/as3020_drv/include/: as3020_drv.h
design_pattern_factory/components/hx710a_drv/: CMakeLists.txt  hx710a_drv.c
design_pattern_factory/components/hx710a_drv/include/: hx710a_drv.h
design_pattern_factory/components/tca9554_drv/: CMakeLists.txt  tca9554_drv.c
design_pattern_factory/components/tca9554_drv/include/: tca9554_drv.h
design_pattern_factory/main/: CMakeLists.txt  hx710a.h  main.cpp  scale.cpp  scale_drv_factory.h
design_pattern_factory/main/adc_interface/: adc_interface.h
design_pattern_factory/main/gpio_expander/: gpio_expander.cpp  gpio_expander.h  gpio_expander_drv_factory.h  tca9554.h
design_pattern_factory/main/gpio_expander_class/: gpio_expander.cpp  gpio_expander.h  gpio_expander_drv_factory.h  tca9554.h
design_pattern_factory/main/gpio_expander_interface/: gpio_expander_interface.h
design_pattern_factory/main/gpio_interface/: gpio_expander_interface.h
design_pattern_factory/main/scale_class/: hx710a.h  scale.cpp  scale.h  scale_drv_factory.h
